# G3CE

./: CMakeLists.txt  README.md
assets/shaders/: color_fragment.glsl  color_vertex.glsl  default_fragment.glsl  default_vertex.glsl  texture_fragment.glsl  texture_vertex.glsl
docs/: header_to_documentation.py  some_theory.txt
g3ce/: CMakeLists.txt  README.md
g3ce/cmd/: run.sh
g3ce/include/: main.h
g3ce/src/engine/core/: window.c
include/: main.h
include/engine/: app.h  globals.h
include/engine/core/: input.h  object.h  window.h
include/engine/gfx/: mesh.h  renderer.h  shader.h  texture.h
include/engine/math/: camera.h  linal.h  transform.h
include/engine/utils/: console.h  file.h
libs/glad/: glad.c  glad.h
src/: main.c  template.c
src/engine/: app.c  globals.c
src/engine/core/: input.c  object.c  window.c
src/engine/gfx/: mesh.c  renderer.c  shader.c  texture.c
src/engine/math/: camera.c  linal.c  transform.c
src/engine/utils/: console.c  file.c
